# bashpack

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cspell.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
scripts/: lib.sh  main.sh
src/: bundler.rs  cli.rs  fs.rs  lib.rs  main.rs  resolver.rs
tests/assets/: lib.sh  sample.sh
