[package]
name = "bashpack"
version = "0.1.0"
authors = ["David Rosenberg <david@dgrdev.com>"]
license = "MIT OR Apache-2.0"
description = "A bundler for Bash scripts."
repository = "https://github.com/targendaz2/bashpack"
readme = "README.md"
keywords = ["bash", "bundle", "bundler"]
categories = ["command-line-utilities"]
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
tempfile = "3.20"
